# homework_10

./: pyproject.toml
quotes/: authors.json  config.ini
quotes/parser/: authors.json  urls.py  views.py
quotes/parser/templates/parser/: index.html
quotes/quoteapp/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_tag_name.py
quotes/quoteapp/static/quoteapp/: bootstrap.min.css  style.css
quotes/quoteapp/templates/quoteapp/: author.html  base.html  detail_author.html  index.html  quote.html  tag.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: login.html  signup.html
